mensaje de confirmación aquí

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <nav class="navegacion">
 <img class="pokemon" src="./img/pokemon.png" alt="logo">
 <ul>
-    <li>About</li>
-    <li>Contacto</li>
-    <li>Carrito</li>
+    <li class="lil-nav">Sobre Nostros</li>
+    <li class="lil-nav">Contacto</li>
+    <li class="lil-nav">Carrito</li>
 </ul>
 
 </nav>
